--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="bucket img1-t4 center">당근이랑  프로필사진 찍기</div>
         <div class="bucket img2-t4 center">1~6월까지 700만원 모으기</div>
         <div class="bucket img3-t4 center">티스토리 독학완료하기</div>
-        <div class="bucket img2-t2 center">새로운 취미 생활배우기</div>
+        <div class="bucket img2-t2 center done">새로운 취미 생활배우기</div>
         <div class="bucket img2-t4 center">새로운 진로 찾아서 배워서 이직하기</div>
         <div class="bucket img5-t4 center">체지방량 줄이고 골격근량 늘리기</div>
     </div>
